[fix/card-70], should change hrizontal scroll on mobile view
*Made updated horizontal scroll
*Small refactoring - removed extra code
*Tirned of the function to move horizontal scroll icon manually
*Fixed issue with horizonal icon jump, that happens sometimes, when scrolling the horizontal scroll and the event 'mouseup'

Trello task 70: https://trello.com/c/EE38a2bY/70-page-navigation-on-mobile

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -31,3 +31,10 @@
     text-align: center;
   }
 }
+
+.mobileNavBarNav {
+  width: 100%;
+  @media (max-width: 500px) {
+    width: 200%;
+  }
+}
